--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -7,11 +7,21 @@
     tools:context="kr.ac.hanyang.term.AddContact">
 
     <LinearLayout
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="16dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.0">
 
         <TextView
             android:id="@+id/name_text"
@@ -26,16 +36,6 @@
             android:ems="10"
             android:hint="이름"
             android:inputType="textPersonName" />
-
-        <TextView
-            android:id="@+id/phone_number_list_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="전화번호 목록" />
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="230dp" />
 
         <TextView
             android:id="@+id/add_phone_number_text"
@@ -57,13 +57,22 @@
             android:layout_height="wrap_content"
             android:text="전화번호 추가" />
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/phone_number_list_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="전화번호 목록" />
 
-    <Button
-        android:id="@+id/commit_contact_btn"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:text="연락처 추가"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="455dp" />
+        <ListView
+            android:id="@+id/phone_number_list"
+            android:layout_width="match_parent"
+            android:layout_height="230dp" />
+
+        <Button
+            android:id="@+id/commit_contact_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="연락처 추가" />
+
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
