--- a/app/src/main/res/layout/activity_detail_contact.xml
+++ b/app/src/main/res/layout/activity_detail_contact.xml
@@ -7,30 +7,39 @@
     tools:context="kr.ac.hanyang.term.DetailContact">
 
     <LinearLayout
-        android:layout_width="344dp"
-        android:layout_height="495dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1"
+        android:weightSum="1">
+
+        <TextView
+            android:id="@+id/name_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Name" />
 
         <TextView
             android:id="@+id/name_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Name" />
-
-        <EditText
-            android:id="@+id/name_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textCapSentences|textPersonName"
-            android:text="이름" />
-
-        <ListView
-            android:id="@+id/phone_number_list"
-            android:layout_width="340dp"
-            android:layout_height="323dp" />
+            android:layout_weight="0.53"
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/add_phone_number_text"
@@ -44,12 +53,18 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="전화번호"
-            android:inputType="textPersonName" />
+            android:inputType="phone" />
 
         <Button
             android:id="@+id/phone_number_add_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="전화번호 추가" />
+
+        <ListView
+            android:id="@+id/phone_number_list"
+            android:layout_width="match_parent"
+            android:layout_height="323dp" />
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
