--- a/app/src/main/res/layout/contact_list_row.xml
+++ b/app/src/main/res/layout/contact_list_row.xml
@@ -3,26 +3,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_vertical|center_horizontal"
+    android:layout_marginLeft="5pt"
+    android:layout_marginRight="5pt"
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/row_phone_number_text"
+        android:id="@+id/contact_row_phone_number_text"
         android:layout_width="match_parent"
         android:layout_height="68dp"
+        android:layout_weight="1.71"
+        android:gravity="center"
+        android:text="asdf"
+        android:textAlignment="textStart"
+        android:textSize="30sp"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/row_delete_btn"
-        android:layout_toStartOf="@+id/row_delete_btn"
-        android:layout_weight="1.71" />
+        android:layout_toLeftOf="@+id/relativeLayout"
+        android:layout_toStartOf="@+id/relativeLayout" />
 
-    <Button
-        android:id="@+id/row_delete_btn"
+    <LinearLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.48"
-        android:text="DELETE"
-        android:layout_alignParentTop="true"
+        android:layout_alignBottom="@+id/contact_row_phone_number_text"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/contact_row_delete_btn"
+            style="@android:style/Widget.Material.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="DELETE"
+            android:textAlignment="center" />
+    </LinearLayout>
+
 </RelativeLayout>
